[gd_scene load_steps=11 format=3 uid="uid://b7vmw6dhf4lw0"]

[ext_resource type="Script" path="res://Game/Interface/shop_item.gd" id="1_a4nb3"]
[ext_resource type="Texture2D" uid="uid://cbow3lc3huh7r" path="res://icon.svg" id="2_r5rc6"]
[ext_resource type="PackedScene" uid="uid://bfre1ywod8qf8" path="res://Game/Interface/brain_icon.tscn" id="4_1kn6s"]
[ext_resource type="PackedScene" uid="uid://b2o66qawxrwjp" path="res://Game/Interface/gold_icon.tscn" id="4_wlvil"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rhnfj"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_v1bkx"]
bg_color = Color(0.881796, 0.482466, 0.000684034, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_prdu3"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4hq43"]
bg_color = Color(0.099986, 0.099986, 0.099986, 1)

[sub_resource type="FontVariation" id="FontVariation_govgv"]
variation_transform = Transform2D(1.1, 0, 0, 1, 0, 0)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cqc5w"]

[node name="ShopItem" type="Button" groups=["g_shop_item"]]
custom_minimum_size = Vector2(0, 75)
anchors_preset = -1
anchor_right = 0.948148
anchor_bottom = 0.078125
offset_right = -6.10352e-05
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_rhnfj")
theme_override_styles/disabled = SubResource("StyleBoxFlat_v1bkx")
theme_override_styles/hover = SubResource("StyleBoxFlat_prdu3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4hq43")
theme_override_styles/normal = SubResource("StyleBoxFlat_prdu3")
script = ExtResource("1_a4nb3")
metadata/_edit_use_anchors_ = true

[node name="LearningItemInfo" type="HBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="LearningItemInfo"]
layout_mode = 2

[node name="ShopTexture" type="TextureRect" parent="LearningItemInfo/AspectRatioContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 75)
layout_mode = 2
texture = ExtResource("2_r5rc6")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="LearningItemInfo"]
layout_mode = 2
size_flags_horizontal = 2

[node name="ItemNameLabel" type="Label" parent="LearningItemInfo/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = SubResource("FontVariation_govgv")
theme_override_font_sizes/font_size = 25
text = "Nom"

[node name="HBoxContainer" type="HBoxContainer" parent="LearningItemInfo/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="GoldIcon" parent="LearningItemInfo/VBoxContainer/HBoxContainer" instance=ExtResource("4_wlvil")]
layout_mode = 2

[node name="ItemPriceLabel" type="Label" parent="LearningItemInfo/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10
text = "xxxxx"
horizontal_alignment = 2

[node name="VBoxContainer2" type="VBoxContainer" parent="LearningItemInfo"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="LearningItemInfo/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
alignment = 1

[node name="LevelLabel" type="Label" parent="LearningItemInfo/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
size_flags_horizontal = 3
text = "Niveau"

[node name="LevelPointLabel" type="Label" parent="LearningItemInfo/VBoxContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "XXX"
horizontal_alignment = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="LearningItemInfo/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 6
alignment = 1

[node name="BrainIcon" parent="LearningItemInfo/VBoxContainer2/HBoxContainer2" instance=ExtResource("4_1kn6s")]
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
alignment_horizontal = 0

[node name="GainKnowledgeLabel" type="Label" parent="LearningItemInfo/VBoxContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "+ XXX"

[node name="VSeparator" type="VSeparator" parent="LearningItemInfo"]
custom_minimum_size = Vector2(35, 0)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_cqc5w")

[node name="ToUnlockedPanel" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.784314)

[node name="UnlockedButton" type="Button" parent="ToUnlockedPanel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 50)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ToUnlockedPanel/UnlockedButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="CostLabel" type="Label" parent="ToUnlockedPanel/UnlockedButton/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="GoldCost" type="Label" parent="ToUnlockedPanel/UnlockedButton/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "X"

[node name="GoldIcon" parent="ToUnlockedPanel/UnlockedButton/HBoxContainer" instance=ExtResource("4_wlvil")]
layout_mode = 2
